--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start:calc": "ts-node frontend-calculadora/src/main.ts",
     "test": "jest",
     "test:coverage": "jest --coverage"
   },
@@ -12,7 +13,9 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/inquirer": "^9.0.9",
     "@types/jest": "^30.0.0",
+    "inquirer": "^13.0.1",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.5",
     "typescript": "^5.9.3"
